# compiled-lang-test

./: Cargo.toml  README.md  hello
src/: ast.rs  codegen.rs  lexer.rs  main.rs  parser.rs  tokens.rs
src/codegen/: intrinsic_fns.rs  mod.rs
src/interpreter/: ast.rs  macros.rs  mod.rs  native_fns.rs  scope.rs  statement.rs  value.rs
src/parser/: ast.rs  mod.rs
