[package]
name = "compiled-lang-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
thiserror = "1.0.56"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
    "llvm14-0",
] }
